ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/MCLR_Master__c.object-meta.xml
<CustomObject>
    <label>MCLR Master</label>
    <nameField>
        <label>MCLR master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCLR masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>