ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/ALCO_Circular_Date__c.field-meta.xml
<CustomField>
    <fullName>ALCO_Circular_Date__c</fullName>
    <label>ALCO Circular Date</label>
    <type>DateTime</type>
</CustomField>