ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/ALCO_Circular_No__c.field-meta.xml
<CustomField>
    <fullName>ALCO_Circular_No__c</fullName>
    <label>ALCO Circular No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>