ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/ALCO_Dept__c.field-meta.xml
<CustomField>
    <fullName>ALCO_Dept__c</fullName>
    <label>ALCO Dept</label>
    <length>20</length>
    <type>Text</type>
</CustomField>