ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/Checker_Id__c.field-meta.xml
<CustomField>
    <fullName>Checker_Id__c</fullName>
    <label>Checker Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>