ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/DR_Penal_Interest__c.field-meta.xml
<CustomField>
    <fullName>DR_Penal_Interest__c</fullName>
    <label>DR_Penal_Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>