ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/Eff_from_date__c.field-meta.xml
<CustomField>
    <fullName>Eff_from_date__c</fullName>
    <label>Eff from date</label>
    <type>DateTime</type>
</CustomField>