ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/Interest_Version_No__c.field-meta.xml
<CustomField>
    <fullName>Interest_Version_No__c</fullName>
    <label>Interest_Version_No</label>
    <length>5</length>
    <type>Text</type>
</CustomField>