ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/MCLR__c.field-meta.xml
<CustomField>
    <fullName>MCLR__c</fullName>
    <label>MCLR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>