ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <length>10</length>
    <type>Text</type>
</CustomField>