ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Period_Type__c</fullName>
    <label>Period Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>