ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>