ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/ROI_perc__c.field-meta.xml
<CustomField>
    <fullName>ROI_perc__c</fullName>
    <label>ROI perc</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>