ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/Sl_No__c.field-meta.xml
<CustomField>
    <fullName>Sl_No__c</fullName>
    <label>Sl No</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>