ProdIND/ProdPrograms/force-app/main/default/objects/MCLR_Master__c/fields/Tenor_Premium__c.field-meta.xml
<CustomField>
    <fullName>Tenor_Premium__c</fullName>
    <label>Tenor Premium</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>